2009-04-24  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #10952: Iframe produced by typo3/backend.php has proprietary attribute "noresize"

2009-04-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10964: ExtJs prototype-adapter leads to several IE-errors

2009-04-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10947: It's not possible to add buttons to docheader (added hook in template.php)

2009-04-22  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #10948: Validation issues in typo3/alt_db_navframe.php

2009-04-21  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10892: Make it possible to style a hover color for pagetree/filetree items

2009-04-21  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #10939: Wrong nesting of <ul> <li> tags in expanded mount root in module file > filelist

2009-04-21  Francois Suter  <francois@typo3.org>

	* Follow up to #10320 (again): t3lib_extMgm::addStaticFile() call did not reflect changes in location of static templates in css_styled_content (from 2009-04-20)

2009-04-21  Ingo Renner  <ingo@typo3.org>

	* Changed icons in t3skin for new file, file upload
	* Fixed icon in t3skin for refresh

2009-04-20  Francois Suter  <francois@typo3.org>

	* Follow up to #10320: Move current version of static files of css_styled_content from static/current/*.txt back to static/*.txt

2009-04-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10759: RemoveXSS is incompatible with PHP >= 5.2.8

2009-04-19  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10919: Hide View-icon in listview with doktypes 254 and 255

2009-04-17  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10827: Hide "Save and View"-button when editing a content-element

2009-04-17  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #2178: template::getTabMenu doubles ampersands (thanks to Stefano Kowalke)

2009-04-16  Oliver Hader  <oliver@typo3.org>
